Compiladores/compilador20121/y.output
State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM ID SEMICOLON decl_list compound_stmt

    2 decl_list: decl_list SEMICOLON decl
    3          | decl
    4          | vazio

    5 decl: dcl_var
    6     | dcl_proc

    7 dcl_var: ident_list COLON type

    8 ident_list: ident_list COMMA ID
    9           | ID

   10 type: INTEGER
   11     | REAL
   12     | BOOLEAN
   13     | CHAR

   14 dcl_proc: tipo_retornado PROC ID espec_parametros corpo

   15 vazio: /* empty */

   16 tipo_retornado: INTEGER
   17               | REAL
   18               | BOOLEAN
   19               | CHAR
   20               | vazio

   21 corpo: COLON decl_list SEMICOLON compound_stmt id_return
   22      | vazio

   23 id_return: ID
   24          | vazio

   25 espec_parametros: LPAR lista_parametros RPAR

   26 lista_parametros: parametro
   27                 | lista_parametros COMMA parametro

   28 parametro: modo type COLON ID

   29 modo: VALUE
   30     | REFERENCE

   31 compound_stmt: BEGIN_TOK stmt_list END

   32 stmt_list: stmt_list SEMICOLON stmt
   33          | stmt

   34 stmt: assign_stmt
   35     | if_stmt
   36     | repeat_stmt
   37     | read_stmt
   38     | write_stmt
   39     | compound_stmt
   40     | function_ref_par

   41 assign_stmt: ID ATRIB expr

   42 if_stmt: IF cond THEN stmt
   43        | IF cond THEN stmt ELSE stmt

   44 cond: expr

   45 repeat_stmt: REPEAT stmt_list UNTIL expr

   46 read_stmt: READ LPAR ident_list RPAR

   47 write_stmt: WRITE LPAR expr_list RPAR

   48 expr_list: expr
   49          | expr_list COMMA expr

   50 expr: simple_expr
   51     | simple_expr EQ simple_expr
   52     | simple_expr NE simple_expr
   53     | simple_expr GT simple_expr
   54     | simple_expr LT simple_expr
   55     | simple_expr GE simple_expr
   56     | simple_expr LE simple_expr

   57 simple_expr: term
   58            | simple_expr ADDOP term

   59 term: factor_a
   60     | term MULOP factor_a

   61 factor_a: '-' factor
   62         | factor

   63 factor: ID
   64       | constant
   65       | LPAR expr RPAR
   66       | NOT factor
   67       | function_ref_par

   68 function_ref_par: built_in_function LPAR expr RPAR
   69                 | variable LPAR expr_list RPAR

   70 built_in_function: SIN
   71                  | LOG
   72                  | COS
   73                  | ORD
   74                  | ABS
   75                  | SQRT
   76                  | EXP
   77                  | EOFILE
   78                  | EOLN

   79 variable: simple_variable_or_proc

   80 simple_variable_or_proc: ID

   81 constant: INTEGER_CONSTANT
   82         | REAL_CONSTANT
   83         | CHAR_CONSTANT
   84         | boolean_constant

   85 boolean_constant: TRUE
   86                 | FALSE


Terminals, with rules where they appear

$end (0) 0
'-' (45) 61
error (256)
COMMA (258) 8 27 49
COLON (259) 7 21 28
SEMICOLON (260) 1 2 21 32
PROC (261) 14
SIN (262) 70
LOG (263) 71
COS (264) 72
ORD (265) 73
ABS (266) 74
SQRT (267) 75
EXP (268) 76
EOFILE (269) 77
EOLN (270) 78
PROGRAM (271) 1
INTEGER (272) 10 16
REAL (273) 11 17
BOOLEAN (274) 12 18
CHAR (275) 13 19
VALUE (276) 29
REFERENCE (277) 30
BEGIN_TOK (278) 31
END (279) 31
IF (280) 42 43
THEN (281) 42 43
ELSE (282) 43
REPEAT (283) 45
UNTIL (284) 45
READ (285) 46
WRITE (286) 47
FALSE (287) 86
TRUE (288) 85
ATRIB (289) 41
LPAR (290) 25 46 47 65 68 69
RPAR (291) 25 46 47 65 68 69
NOT (292) 66
EQ (293) 51
NE (294) 52
GT (295) 53
LT (296) 54
GE (297) 55
LE (298) 56
ADDOP (299) 58
MULOP (300) 60
ID (301) 1 8 9 14 23 28 41 63 80
INTEGER_CONSTANT (302) 81
REAL_CONSTANT (303) 82
CHAR_CONSTANT (304) 83


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
decl_list (53)
    on left: 2 3 4, on right: 1 2 21
decl (54)
    on left: 5 6, on right: 2 3
dcl_var (55)
    on left: 7, on right: 5
ident_list (56)
    on left: 8 9, on right: 7 8 46
type (57)
    on left: 10 11 12 13, on right: 7 28
dcl_proc (58)
    on left: 14, on right: 6
vazio (59)
    on left: 15, on right: 4 20 22 24
tipo_retornado (60)
    on left: 16 17 18 19 20, on right: 14
corpo (61)
    on left: 21 22, on right: 14
id_return (62)
    on left: 23 24, on right: 21
espec_parametros (63)
    on left: 25, on right: 14
lista_parametros (64)
    on left: 26 27, on right: 25 27
parametro (65)
    on left: 28, on right: 26 27
modo (66)
    on left: 29 30, on right: 28
compound_stmt (67)
    on left: 31, on right: 1 21 39
stmt_list (68)
    on left: 32 33, on right: 31 32 45
stmt (69)
    on left: 34 35 36 37 38 39 40, on right: 32 33 42 43
assign_stmt (70)
    on left: 41, on right: 34
if_stmt (71)
    on left: 42 43, on right: 35
cond (72)
    on left: 44, on right: 42 43
repeat_stmt (73)
    on left: 45, on right: 36
read_stmt (74)
    on left: 46, on right: 37
write_stmt (75)
    on left: 47, on right: 38
expr_list (76)
    on left: 48 49, on right: 47 49 69
expr (77)
    on left: 50 51 52 53 54 55 56, on right: 41 44 45 48 49 65 68
simple_expr (78)
    on left: 57 58, on right: 50 51 52 53 54 55 56 58
term (79)
    on left: 59 60, on right: 57 58 60
factor_a (80)
    on left: 61 62, on right: 59 60
factor (81)
    on left: 63 64 65 66 67, on right: 61 62 66
function_ref_par (82)
    on left: 68 69, on right: 40 67
built_in_function (83)
    on left: 70 71 72 73 74 75 76 77 78, on right: 68
variable (84)
    on left: 79, on right: 69
simple_variable_or_proc (85)
    on left: 80, on right: 79
constant (86)
    on left: 81 82 83 84, on right: 64
boolean_constant (87)
    on left: 85 86, on right: 84


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


state 1

    1 program: PROGRAM . ID SEMICOLON decl_list compound_stmt

    ID  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: PROGRAM ID . SEMICOLON decl_list compound_stmt

    SEMICOLON  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: PROGRAM ID SEMICOLON . decl_list compound_stmt

    INTEGER  shift, and go to state 6
    REAL     shift, and go to state 7
    BOOLEAN  shift, and go to state 8
    CHAR     shift, and go to state 9
    ID       shift, and go to state 10

    $default  reduce using rule 15 (vazio)

    decl_list       go to state 11
    decl            go to state 12
    dcl_var         go to state 13
    ident_list      go to state 14
    dcl_proc        go to state 15
    vazio           go to state 16
    tipo_retornado  go to state 17


state 6

   16 tipo_retornado: INTEGER .

    $default  reduce using rule 16 (tipo_retornado)


state 7

   17 tipo_retornado: REAL .

    $default  reduce using rule 17 (tipo_retornado)


state 8

   18 tipo_retornado: BOOLEAN .

    $default  reduce using rule 18 (tipo_retornado)


state 9

   19 tipo_retornado: CHAR .

    $default  reduce using rule 19 (tipo_retornado)


state 10

    9 ident_list: ID .

    $default  reduce using rule 9 (ident_list)


state 11

    1 program: PROGRAM ID SEMICOLON decl_list . compound_stmt
    2 decl_list: decl_list . SEMICOLON decl

    SEMICOLON  shift, and go to state 18
    BEGIN_TOK  shift, and go to state 19

    compound_stmt  go to state 20


state 12

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


state 13

    5 decl: dcl_var .

    $default  reduce using rule 5 (decl)


state 14

    7 dcl_var: ident_list . COLON type
    8 ident_list: ident_list . COMMA ID

    COMMA  shift, and go to state 21
    COLON  shift, and go to state 22


state 15

    6 decl: dcl_proc .

    $default  reduce using rule 6 (decl)


state 16

    4 decl_list: vazio .
   20 tipo_retornado: vazio .

    PROC      reduce using rule 20 (tipo_retornado)
    $default  reduce using rule 4 (decl_list)


state 17

   14 dcl_proc: tipo_retornado . PROC ID espec_parametros corpo

    PROC  shift, and go to state 23


state 18

    2 decl_list: decl_list SEMICOLON . decl

    INTEGER  shift, and go to state 6
    REAL     shift, and go to state 7
    BOOLEAN  shift, and go to state 8
    CHAR     shift, and go to state 9
    ID       shift, and go to state 10

    $default  reduce using rule 15 (vazio)

    decl            go to state 24
    dcl_var         go to state 13
    ident_list      go to state 14
    dcl_proc        go to state 15
    vazio           go to state 25
    tipo_retornado  go to state 17


state 19

   31 compound_stmt: BEGIN_TOK . stmt_list END

    SIN        shift, and go to state 26
    LOG        shift, and go to state 27
    COS        shift, and go to state 28
    ORD        shift, and go to state 29
    ABS        shift, and go to state 30
    SQRT       shift, and go to state 31
    EXP        shift, and go to state 32
    EOFILE     shift, and go to state 33
    EOLN       shift, and go to state 34
    BEGIN_TOK  shift, and go to state 19
    IF         shift, and go to state 35
    REPEAT     shift, and go to state 36
    READ       shift, and go to state 37
    WRITE      shift, and go to state 38
    ID         shift, and go to state 39

    compound_stmt            go to state 40
    stmt_list                go to state 41
    stmt                     go to state 42
    assign_stmt              go to state 43
    if_stmt                  go to state 44
    repeat_stmt              go to state 45
    read_stmt                go to state 46
    write_stmt               go to state 47
    function_ref_par         go to state 48
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51


state 20

    1 program: PROGRAM ID SEMICOLON decl_list compound_stmt .

    $default  reduce using rule 1 (program)


state 21

    8 ident_list: ident_list COMMA . ID

    ID  shift, and go to state 52


state 22

    7 dcl_var: ident_list COLON . type

    INTEGER  shift, and go to state 53
    REAL     shift, and go to state 54
    BOOLEAN  shift, and go to state 55
    CHAR     shift, and go to state 56

    type  go to state 57


state 23

   14 dcl_proc: tipo_retornado PROC . ID espec_parametros corpo

    ID  shift, and go to state 58


state 24

    2 decl_list: decl_list SEMICOLON decl .

    $default  reduce using rule 2 (decl_list)


state 25

   20 tipo_retornado: vazio .

    $default  reduce using rule 20 (tipo_retornado)


state 26

   70 built_in_function: SIN .

    $default  reduce using rule 70 (built_in_function)


state 27

   71 built_in_function: LOG .

    $default  reduce using rule 71 (built_in_function)


state 28

   72 built_in_function: COS .

    $default  reduce using rule 72 (built_in_function)


state 29

   73 built_in_function: ORD .

    $default  reduce using rule 73 (built_in_function)


state 30

   74 built_in_function: ABS .

    $default  reduce using rule 74 (built_in_function)


state 31

   75 built_in_function: SQRT .

    $default  reduce using rule 75 (built_in_function)


state 32

   76 built_in_function: EXP .

    $default  reduce using rule 76 (built_in_function)


state 33

   77 built_in_function: EOFILE .

    $default  reduce using rule 77 (built_in_function)


state 34

   78 built_in_function: EOLN .

    $default  reduce using rule 78 (built_in_function)


state 35

   42 if_stmt: IF . cond THEN stmt
   43        | IF . cond THEN stmt ELSE stmt

    SIN               shift, and go to state 26
    LOG               shift, and go to state 27
    COS               shift, and go to state 28
    ORD               shift, and go to state 29
    ABS               shift, and go to state 30
    SQRT              shift, and go to state 31
    EXP               shift, and go to state 32
    EOFILE            shift, and go to state 33
    EOLN              shift, and go to state 34
    FALSE             shift, and go to state 59
    TRUE              shift, and go to state 60
    LPAR              shift, and go to state 61
    NOT               shift, and go to state 62
    ID                shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    REAL_CONSTANT     shift, and go to state 65
    CHAR_CONSTANT     shift, and go to state 66
    '-'               shift, and go to state 67

    cond                     go to state 68
    expr                     go to state 69
    simple_expr              go to state 70
    term                     go to state 71
    factor_a                 go to state 72
    factor                   go to state 73
    function_ref_par         go to state 74
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51
    constant                 go to state 75
    boolean_constant         go to state 76


state 36

   45 repeat_stmt: REPEAT . stmt_list UNTIL expr

    SIN        shift, and go to state 26
    LOG        shift, and go to state 27
    COS        shift, and go to state 28
    ORD        shift, and go to state 29
    ABS        shift, and go to state 30
    SQRT       shift, and go to state 31
    EXP        shift, and go to state 32
    EOFILE     shift, and go to state 33
    EOLN       shift, and go to state 34
    BEGIN_TOK  shift, and go to state 19
    IF         shift, and go to state 35
    REPEAT     shift, and go to state 36
    READ       shift, and go to state 37
    WRITE      shift, and go to state 38
    ID         shift, and go to state 39

    compound_stmt            go to state 40
    stmt_list                go to state 77
    stmt                     go to state 42
    assign_stmt              go to state 43
    if_stmt                  go to state 44
    repeat_stmt              go to state 45
    read_stmt                go to state 46
    write_stmt               go to state 47
    function_ref_par         go to state 48
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51


state 37

   46 read_stmt: READ . LPAR ident_list RPAR

    LPAR  shift, and go to state 78


state 38

   47 write_stmt: WRITE . LPAR expr_list RPAR

    LPAR  shift, and go to state 79


state 39

   41 assign_stmt: ID . ATRIB expr
   80 simple_variable_or_proc: ID .

    ATRIB  shift, and go to state 80

    $default  reduce using rule 80 (simple_variable_or_proc)


state 40

   39 stmt: compound_stmt .

    $default  reduce using rule 39 (stmt)


state 41

   31 compound_stmt: BEGIN_TOK stmt_list . END
   32 stmt_list: stmt_list . SEMICOLON stmt

    SEMICOLON  shift, and go to state 81
    END        shift, and go to state 82


state 42

   33 stmt_list: stmt .

    $default  reduce using rule 33 (stmt_list)


state 43

   34 stmt: assign_stmt .

    $default  reduce using rule 34 (stmt)


state 44

   35 stmt: if_stmt .

    $default  reduce using rule 35 (stmt)


state 45

   36 stmt: repeat_stmt .

    $default  reduce using rule 36 (stmt)


state 46

   37 stmt: read_stmt .

    $default  reduce using rule 37 (stmt)


state 47

   38 stmt: write_stmt .

    $default  reduce using rule 38 (stmt)


state 48

   40 stmt: function_ref_par .

    $default  reduce using rule 40 (stmt)


state 49

   68 function_ref_par: built_in_function . LPAR expr RPAR

    LPAR  shift, and go to state 83


state 50

   69 function_ref_par: variable . LPAR expr_list RPAR

    LPAR  shift, and go to state 84


state 51

   79 variable: simple_variable_or_proc .

    $default  reduce using rule 79 (variable)


state 52

    8 ident_list: ident_list COMMA ID .

    $default  reduce using rule 8 (ident_list)


state 53

   10 type: INTEGER .

    $default  reduce using rule 10 (type)


state 54

   11 type: REAL .

    $default  reduce using rule 11 (type)


state 55

   12 type: BOOLEAN .

    $default  reduce using rule 12 (type)


state 56

   13 type: CHAR .

    $default  reduce using rule 13 (type)


state 57

    7 dcl_var: ident_list COLON type .

    $default  reduce using rule 7 (dcl_var)


state 58

   14 dcl_proc: tipo_retornado PROC ID . espec_parametros corpo

    LPAR  shift, and go to state 85

    espec_parametros  go to state 86


state 59

   86 boolean_constant: FALSE .

    $default  reduce using rule 86 (boolean_constant)


state 60

   85 boolean_constant: TRUE .

    $default  reduce using rule 85 (boolean_constant)


state 61

   65 factor: LPAR . expr RPAR

    SIN               shift, and go to state 26
    LOG               shift, and go to state 27
    COS               shift, and go to state 28
    ORD               shift, and go to state 29
    ABS               shift, and go to state 30
    SQRT              shift, and go to state 31
    EXP               shift, and go to state 32
    EOFILE            shift, and go to state 33
    EOLN              shift, and go to state 34
    FALSE             shift, and go to state 59
    TRUE              shift, and go to state 60
    LPAR              shift, and go to state 61
    NOT               shift, and go to state 62
    ID                shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    REAL_CONSTANT     shift, and go to state 65
    CHAR_CONSTANT     shift, and go to state 66
    '-'               shift, and go to state 67

    expr                     go to state 87
    simple_expr              go to state 70
    term                     go to state 71
    factor_a                 go to state 72
    factor                   go to state 73
    function_ref_par         go to state 74
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51
    constant                 go to state 75
    boolean_constant         go to state 76


state 62

   66 factor: NOT . factor

    SIN               shift, and go to state 26
    LOG               shift, and go to state 27
    COS               shift, and go to state 28
    ORD               shift, and go to state 29
    ABS               shift, and go to state 30
    SQRT              shift, and go to state 31
    EXP               shift, and go to state 32
    EOFILE            shift, and go to state 33
    EOLN              shift, and go to state 34
    FALSE             shift, and go to state 59
    TRUE              shift, and go to state 60
    LPAR              shift, and go to state 61
    NOT               shift, and go to state 62
    ID                shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    REAL_CONSTANT     shift, and go to state 65
    CHAR_CONSTANT     shift, and go to state 66

    factor                   go to state 88
    function_ref_par         go to state 74
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51
    constant                 go to state 75
    boolean_constant         go to state 76


state 63

   63 factor: ID .
   80 simple_variable_or_proc: ID .

    LPAR      reduce using rule 80 (simple_variable_or_proc)
    $default  reduce using rule 63 (factor)


state 64

   81 constant: INTEGER_CONSTANT .

    $default  reduce using rule 81 (constant)


state 65

   82 constant: REAL_CONSTANT .

    $default  reduce using rule 82 (constant)


state 66

   83 constant: CHAR_CONSTANT .

    $default  reduce using rule 83 (constant)


state 67

   61 factor_a: '-' . factor

    SIN               shift, and go to state 26
    LOG               shift, and go to state 27
    COS               shift, and go to state 28
    ORD               shift, and go to state 29
    ABS               shift, and go to state 30
    SQRT              shift, and go to state 31
    EXP               shift, and go to state 32
    EOFILE            shift, and go to state 33
    EOLN              shift, and go to state 34
    FALSE             shift, and go to state 59
    TRUE              shift, and go to state 60
    LPAR              shift, and go to state 61
    NOT               shift, and go to state 62
    ID                shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    REAL_CONSTANT     shift, and go to state 65
    CHAR_CONSTANT     shift, and go to state 66

    factor                   go to state 89
    function_ref_par         go to state 74
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51
    constant                 go to state 75
    boolean_constant         go to state 76


state 68

   42 if_stmt: IF cond . THEN stmt
   43        | IF cond . THEN stmt ELSE stmt

    THEN  shift, and go to state 90


state 69

   44 cond: expr .

    $default  reduce using rule 44 (cond)


state 70

   50 expr: simple_expr .
   51     | simple_expr . EQ simple_expr
   52     | simple_expr . NE simple_expr
   53     | simple_expr . GT simple_expr
   54     | simple_expr . LT simple_expr
   55     | simple_expr . GE simple_expr
   56     | simple_expr . LE simple_expr
   58 simple_expr: simple_expr . ADDOP term

    EQ     shift, and go to state 91
    NE     shift, and go to state 92
    GT     shift, and go to state 93
    LT     shift, and go to state 94
    GE     shift, and go to state 95
    LE     shift, and go to state 96
    ADDOP  shift, and go to state 97

    $default  reduce using rule 50 (expr)


state 71

   57 simple_expr: term .
   60 term: term . MULOP factor_a

    MULOP  shift, and go to state 98

    $default  reduce using rule 57 (simple_expr)


state 72

   59 term: factor_a .

    $default  reduce using rule 59 (term)


state 73

   62 factor_a: factor .

    $default  reduce using rule 62 (factor_a)


state 74

   67 factor: function_ref_par .

    $default  reduce using rule 67 (factor)


state 75

   64 factor: constant .

    $default  reduce using rule 64 (factor)


state 76

   84 constant: boolean_constant .

    $default  reduce using rule 84 (constant)


state 77

   32 stmt_list: stmt_list . SEMICOLON stmt
   45 repeat_stmt: REPEAT stmt_list . UNTIL expr

    SEMICOLON  shift, and go to state 81
    UNTIL      shift, and go to state 99


state 78

   46 read_stmt: READ LPAR . ident_list RPAR

    ID  shift, and go to state 10

    ident_list  go to state 100


state 79

   47 write_stmt: WRITE LPAR . expr_list RPAR

    SIN               shift, and go to state 26
    LOG               shift, and go to state 27
    COS               shift, and go to state 28
    ORD               shift, and go to state 29
    ABS               shift, and go to state 30
    SQRT              shift, and go to state 31
    EXP               shift, and go to state 32
    EOFILE            shift, and go to state 33
    EOLN              shift, and go to state 34
    FALSE             shift, and go to state 59
    TRUE              shift, and go to state 60
    LPAR              shift, and go to state 61
    NOT               shift, and go to state 62
    ID                shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    REAL_CONSTANT     shift, and go to state 65
    CHAR_CONSTANT     shift, and go to state 66
    '-'               shift, and go to state 67

    expr_list                go to state 101
    expr                     go to state 102
    simple_expr              go to state 70
    term                     go to state 71
    factor_a                 go to state 72
    factor                   go to state 73
    function_ref_par         go to state 74
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51
    constant                 go to state 75
    boolean_constant         go to state 76


state 80

   41 assign_stmt: ID ATRIB . expr

    SIN               shift, and go to state 26
    LOG               shift, and go to state 27
    COS               shift, and go to state 28
    ORD               shift, and go to state 29
    ABS               shift, and go to state 30
    SQRT              shift, and go to state 31
    EXP               shift, and go to state 32
    EOFILE            shift, and go to state 33
    EOLN              shift, and go to state 34
    FALSE             shift, and go to state 59
    TRUE              shift, and go to state 60
    LPAR              shift, and go to state 61
    NOT               shift, and go to state 62
    ID                shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    REAL_CONSTANT     shift, and go to state 65
    CHAR_CONSTANT     shift, and go to state 66
    '-'               shift, and go to state 67

    expr                     go to state 103
    simple_expr              go to state 70
    term                     go to state 71
    factor_a                 go to state 72
    factor                   go to state 73
    function_ref_par         go to state 74
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51
    constant                 go to state 75
    boolean_constant         go to state 76


state 81

   32 stmt_list: stmt_list SEMICOLON . stmt

    SIN        shift, and go to state 26
    LOG        shift, and go to state 27
    COS        shift, and go to state 28
    ORD        shift, and go to state 29
    ABS        shift, and go to state 30
    SQRT       shift, and go to state 31
    EXP        shift, and go to state 32
    EOFILE     shift, and go to state 33
    EOLN       shift, and go to state 34
    BEGIN_TOK  shift, and go to state 19
    IF         shift, and go to state 35
    REPEAT     shift, and go to state 36
    READ       shift, and go to state 37
    WRITE      shift, and go to state 38
    ID         shift, and go to state 39

    compound_stmt            go to state 40
    stmt                     go to state 104
    assign_stmt              go to state 43
    if_stmt                  go to state 44
    repeat_stmt              go to state 45
    read_stmt                go to state 46
    write_stmt               go to state 47
    function_ref_par         go to state 48
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51


state 82

   31 compound_stmt: BEGIN_TOK stmt_list END .

    $default  reduce using rule 31 (compound_stmt)


state 83

   68 function_ref_par: built_in_function LPAR . expr RPAR

    SIN               shift, and go to state 26
    LOG               shift, and go to state 27
    COS               shift, and go to state 28
    ORD               shift, and go to state 29
    ABS               shift, and go to state 30
    SQRT              shift, and go to state 31
    EXP               shift, and go to state 32
    EOFILE            shift, and go to state 33
    EOLN              shift, and go to state 34
    FALSE             shift, and go to state 59
    TRUE              shift, and go to state 60
    LPAR              shift, and go to state 61
    NOT               shift, and go to state 62
    ID                shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    REAL_CONSTANT     shift, and go to state 65
    CHAR_CONSTANT     shift, and go to state 66
    '-'               shift, and go to state 67

    expr                     go to state 105
    simple_expr              go to state 70
    term                     go to state 71
    factor_a                 go to state 72
    factor                   go to state 73
    function_ref_par         go to state 74
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51
    constant                 go to state 75
    boolean_constant         go to state 76


state 84

   69 function_ref_par: variable LPAR . expr_list RPAR

    SIN               shift, and go to state 26
    LOG               shift, and go to state 27
    COS               shift, and go to state 28
    ORD               shift, and go to state 29
    ABS               shift, and go to state 30
    SQRT              shift, and go to state 31
    EXP               shift, and go to state 32
    EOFILE            shift, and go to state 33
    EOLN              shift, and go to state 34
    FALSE             shift, and go to state 59
    TRUE              shift, and go to state 60
    LPAR              shift, and go to state 61
    NOT               shift, and go to state 62
    ID                shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    REAL_CONSTANT     shift, and go to state 65
    CHAR_CONSTANT     shift, and go to state 66
    '-'               shift, and go to state 67

    expr_list                go to state 106
    expr                     go to state 102
    simple_expr              go to state 70
    term                     go to state 71
    factor_a                 go to state 72
    factor                   go to state 73
    function_ref_par         go to state 74
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51
    constant                 go to state 75
    boolean_constant         go to state 76


state 85

   25 espec_parametros: LPAR . lista_parametros RPAR

    VALUE      shift, and go to state 107
    REFERENCE  shift, and go to state 108

    lista_parametros  go to state 109
    parametro         go to state 110
    modo              go to state 111


state 86

   14 dcl_proc: tipo_retornado PROC ID espec_parametros . corpo

    COLON  shift, and go to state 112

    $default  reduce using rule 15 (vazio)

    vazio  go to state 113
    corpo  go to state 114


state 87

   65 factor: LPAR expr . RPAR

    RPAR  shift, and go to state 115


state 88

   66 factor: NOT factor .

    $default  reduce using rule 66 (factor)


state 89

   61 factor_a: '-' factor .

    $default  reduce using rule 61 (factor_a)


state 90

   42 if_stmt: IF cond THEN . stmt
   43        | IF cond THEN . stmt ELSE stmt

    SIN        shift, and go to state 26
    LOG        shift, and go to state 27
    COS        shift, and go to state 28
    ORD        shift, and go to state 29
    ABS        shift, and go to state 30
    SQRT       shift, and go to state 31
    EXP        shift, and go to state 32
    EOFILE     shift, and go to state 33
    EOLN       shift, and go to state 34
    BEGIN_TOK  shift, and go to state 19
    IF         shift, and go to state 35
    REPEAT     shift, and go to state 36
    READ       shift, and go to state 37
    WRITE      shift, and go to state 38
    ID         shift, and go to state 39

    compound_stmt            go to state 40
    stmt                     go to state 116
    assign_stmt              go to state 43
    if_stmt                  go to state 44
    repeat_stmt              go to state 45
    read_stmt                go to state 46
    write_stmt               go to state 47
    function_ref_par         go to state 48
    built_in_function        go to state 49
    variable                 go to state 50
    simple_variable_or_proc  go to state 51


state 91

   51 expr: simple_expr EQ . simple_expr

    SIN               shift, and go to state 26
    LOG               shift, and go to state 27
    COS               shift, and go to state 28
    ORD               shift, and go to state 29
    ABS               shift, and go to state 30
    SQRT              shift, and go to state 31
    EXP               shift, and go to state 32
    EOFILE            shift, and go to state 33
    EOLN              shift, and go to state 34
    FALSE             shift, and go to state 59
    TRUE              shift, and go to state 60
    LPAR              shift, and go to state 61
    NOT               shift, and go to state 62
    ID                shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    REAL_CONSTANT     shift, and go to state 65
    CHAR_CONSTANT     shift, and go to state 66
    '-'               shift, and go to state 67
